Fix for Github Issue #41
The changes found in this commit **SHOULD** remove the horizontal scroll bars found on the Directory and About pages.

--- a/src/app/directory/directory.component.css
+++ b/src/app/directory/directory.component.css
@@ -1,5 +1,8 @@
+
+
 .directory {
   padding: 3% 3%;
+  overflow:hidden; /*I added this in but can be removed later, I am guessing here. Chromaticdeth19xx*/
 }
 
 .mat-form-field {
@@ -9,7 +12,7 @@
 
 .mat-table {
   width: 100%;
-  overflow: auto;
+  overflow: auto; /*Here is the overflow set to auto again, I'm flying blind here and I am guessing that setting this to hidden will work. Chromaticdeth19xx*/
   max-height: auto;
   display: inline-block;
 }
